--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -22,9 +22,9 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings.
           flake8 . --count --exit-zero --max-line-length=80 --ignore=E111,E121,E126 --statistics
+      - run: python sender.py
       - name: Run and collect coverage
         run: |
-          python sender.py
           coverage run --branch test_sender.py
           coverage html
           coverage report
