--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -22,7 +22,7 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings.
           flake8 . --count --exit-zero --max-line-length=80 --ignore=E111,E121,E126 --statistics
-      - run: python sender.py receiver.py
+      - run: python sender.py
       - name: Run and collect coverage
         run: |
           coverage run --branch test_sender.py
