--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -23,8 +23,6 @@ jobs:
           # exit-zero treats all errors as warnings.
           flake8 . --count --exit-zero --max-line-length=80 --ignore=E111,E121,E126 --statistics
       - run: python sender.py
-        name: Run_Receiver
-      - run: python test_sender.py | python receiver.py
       - name: Run and collect coverage
         run: |
           coverage run --branch test_sender.py
@@ -36,3 +34,11 @@ jobs:
           name: coverage
           path: ./htmlcov
           retention-days: 21
+      - name: Run1
+        run: python sender.py 
+        
+      - name: Run2
+        run: python test_sender.py 
+      
+      - name: Run3
+        run: python test_sender.py | python receiver.py
