--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -34,11 +34,7 @@ jobs:
           name: coverage
           path: ./htmlcov
           retention-days: 21
-      - name: Run1
-        run: python sender.py 
-        
-      - name: Run2
-        run: python test_sender.py 
+          
+      - run: python test_sender.py 
       
-      - name: Run3
-        run: python test_sender.py | python receiver.py
+      - run: python test_sender.py | python receiver.py
