--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -35,6 +35,6 @@ jobs:
           path: ./htmlcov
           retention-days: 21
           
-      - run: python test_sender.py 
-      
-      - run: python test_sender.py | python receiver.py
+      - name: Command redirection and pipeline
+        run: |
+          python sender.py | python receiver.py
