--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -41,7 +41,7 @@ jobs:
           
       - name: Run and collect coverage
         run: |
-          coverage run --branch test_receiver.py.py
+          coverage run --branch test_receiver.py
           coverage html
           coverage report
       - name: Upload coverage
